--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/material-bottom-tabs": "^5.2.5",
+    "@react-navigation/native": "^5.3.2",
+    "@react-navigation/stack": "^5.3.6",
     "add": "^2.0.6",
     "apollo-boost": "^0.4.7",
     "graphql": "^15.0.0",
@@ -20,9 +24,15 @@
     "react-apollo": "^3.1.5",
     "react-native": "0.62.1",
     "react-native-calendars": "^1.265.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.10.1",
+    "react-native-reanimated": "^1.8.0",
     "react-native-render-html": "^4.2.0",
+    "react-native-safe-area-context": "^1.0.0",
+    "react-native-screens": "^2.7.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
