--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.3.6",
     "add": "^2.0.6",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-persist": "^0.1.1",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "moment": "^2.25.3",
@@ -23,6 +24,7 @@
     "react": "16.11.0",
     "react-apollo": "^3.1.5",
     "react-native": "0.62.1",
+    "react-native-appearance": "^0.3.4",
     "react-native-calendars": "^1.265.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
