--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "build-fragment": "node src/schemaQuery.js"
+    "build-fragment": "node src/schemaQuery.js",
+    "flow": "flow"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -55,6 +56,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-react-native": "^3.8.1",
+    "flow-bin": "^0.113.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "react-test-renderer": "16.11.0"
