--- a/package.json
+++ b/package.json
@@ -1,65 +1,86 @@
 {
+  "main": "node_modules/expo/AppEntry.js",
   "name": "WonderSchools",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
+    "start": "expo start",
+    "start-offline": "expo start --offline",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject",
+    "test": "jest --watchAll",
+    "devtools": "npx devtools",
     "lint": "eslint .",
     "build-fragment": "node src/schemaQuery.js"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.3.1",
     "@react-navigation/material-bottom-tabs": "^5.2.5",
-    "@react-navigation/native": "^5.3.2",
-    "@react-navigation/stack": "^5.3.6",
+    "@react-navigation/native": "^5.2.1",
+    "@react-navigation/stack": "^5.2.16",
+    "@types/react": "^16.9.35",
     "add": "^2.0.6",
     "apollo-boost": "^0.4.7",
     "apollo-cache-persist": "^0.1.1",
-    "graphql": "^15.0.0",
+    "core-js": "^3.6.5",
+    "expo": "~37.0.9",
+    "expo-asset": "~8.1.0",
+    "expo-av": "~8.1.0",
+    "expo-constants": "~9.0.0",
+    "expo-font": "~8.1.0",
+    "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "moment": "^2.25.3",
     "or": "^0.2.0",
-    "react": "16.11.0",
+    "react": "~16.9.0",
     "react-apollo": "^3.1.5",
-    "react-native": "0.62.1",
+    "react-dom": "^16.5.1",
+    "react-lifecycles-compat": "^3.0.4",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-appearance": "^0.3.4",
-    "react-native-calendars": "^1.265.0",
-    "react-native-gesture-handler": "^1.6.1",
-    "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "^1.8.0",
+    "react-native-calendars": "1.196.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^3.6.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-render-html": "^4.2.0",
-    "react-native-safe-area-context": "^1.0.0",
-    "react-native-screens": "^2.7.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-slider": "^0.11.0",
+    "react-native-svg": "11.0.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-text": "^1.0.8",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-webview": "^9.4.0",
+    "react-native-webview": "8.1.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.1.0",
+    "xmldom": "^0.3.0",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "^8.1.0",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.8.0",
+    "eslint": "^5.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-react-native": "^3.8.1",
-    "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "jest-expo": "^37.0.0",
+    "react-devtools": "^4.6.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "jest-expo"
   }
 }
