--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-cache-persist": "^0.1.1",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "html-entities": "^1.3.1",
     "moment": "^2.25.3",
     "or": "^0.2.0",
     "react": "16.11.0",
