--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-appearance": "^0.3.4",
     "react-native-calendars": "1.196.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-render-html": "^4.2.0",
