--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-appearance": "^0.3.4",
-    "react-native-calendars": "1.196.0",
+    "react-native-calendars": "^1.300.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.6.0",
