--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.5.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-appearance": "^0.3.4",
     "react-native-calendars": "1.196.0",
     "react-native-gesture-handler": "~1.6.0",
@@ -69,10 +70,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "^8.1.0",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
+    "babel-preset-expo": "^8.1.0",
     "eslint": "^5.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -82,10 +83,10 @@
     "eslint-plugin-react-native": "^3.8.1",
     "flow-bin": "^0.113.0",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0",
     "jest-expo": "^37.0.0",
-    "react-devtools": "^4.6.0"
+    "metro-react-native-babel-preset": "^0.58.0",
+    "react-devtools": "^4.6.0",
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "jest-expo"
