--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-av": "~8.1.0",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
+    "expo-status-bar": "^1.0.2",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "html-entities": "^1.3.1",
@@ -44,6 +45,7 @@
     "react-dom": "^16.5.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-appearance": "^0.3.4",
     "react-native-calendars": "^1.300.0",
     "react-native-gesture-handler": "~1.6.0",
