--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "sentry-expo": "^2.1.2",
     "styled-components": "^5.1.0",
     "xmldom": "^0.3.0",
     "yarn": "^1.22.4"
